# audalign

./: .gitignore  CHANGELOG.md  FraserStreet.json  LICENSE.md  README.md  Sub.json  TestAudio.json  align.py  all_audio.json  bash.exe.stackdump  figuring.py  main.py  main2.py  main3.py  molasses.py  pyproject.toml  pytest.ini  requirements.txt  run_align.py  run_aligns.sh  runner.sh  setup.py  simpleaudio.py  test_mp3s.json  test_mp3s.pickle  tidbits.py
.github/workflows/: python-package.yml  python-publish.yml
audalign/: CHANGELOG.md  __init__.py  align.py  correcognize.py  database.py  database_sql.py  datalign.py  decoder.py  filehandler.py  fingerprint.py  recognize.py  test_audalign.py  testing.py  visimproved.py  visrecognize.py  wavio.py
audalign/align/: __init__.py  aligner.py
audalign/config/: __init__.py  align.py  base.py  correlation.py  correlation_spectrogram.py  fingerprint.py  visrecognize.py  visual.py
audalign/recognizers/: __init__.py  correcognize.py  visrecognize.py
audalign/recognizers/correcognize/: __init__.py  correcognize.py
audalign/recognizers/correcognizeSpectrogram/: __init__.py  correcognize_spectrogram.py
audalign/recognizers/fingerprint/: __init__.py  fingerprinter.py  recognize.py
audalign/recognizers/visrecognize/: __init__.py  (+1 more)
dejavu/: __init__.py  database_sql.py  decoder.py  fingerprint.py  recognize.py  testing.py
tests/: align_test.pickle  test_align.py  test_audalign.py  test_datalign.py  test_recognize.py
tests_dockerfiles/: Dockerfile-3-10  Dockerfile-3-11  Dockerfile-3-12  Dockerfile-3-8  Dockerfile-3-9
